--- a/index.html
+++ b/index.html
@@ -1,3 +1,89 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gym FitPower</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Gym FitPower</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>-->
+
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Gym FitPower</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1>Bienvenido a Gym FitPower</h1>
+            <p>Transforma tu cuerpo, transforma tu vida</p>
+            <a href="#contact" class="btn btn-light">Únete ahora</a>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container py-5 text-center">
+        <h2>Sobre Nosotros</h2>
+        <p>Somos un gimnasio dedicado a mejorar tu salud y bienestar con entrenadores profesionales.</p>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="bg-light py-5 text-center">
+        <div class="container">
+            <h2>Nuestros Servicios</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Entrenamiento Personalizado</h4>
+                    <p>Planes de entrenamiento adaptados a ti.</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Clases Grupales</h4>
+                    <p>Yoga, Zumba, HIIT y más.</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Nutrición</h4>
+                    <p>Asesoría nutricional para maximizar tus resultados.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container py-5 text-center">
+        <h2>Contacto</h2>
+        <p>Email: info@gymfitpower.com | Tel: +123 456 7890</p>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 Gym FitPower. Todos los derechos reservados.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
