navegacion y header hechas al 90%

--- a/index.html
+++ b/index.html
@@ -3,53 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gym FitPower</title>
+    <title>Gimnasio Grecia</title>
+    <link rel="icon" type="image/jpg" href="media/favicon.jpg">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Gym FitPower</a>
+    <nav class="navbar navbar-expand-lg navbar-dark color-primario-mio">
+        <div class="container color-texto-mio">
+            <!--<a class="navbar-brand" href="./index.html">Gimnasio Grecia</a>-->
+            <a class="navbar-brand" href="./index.html"><img class="imagen-logo" src="media/favicon.jpg"></a>
+            <span class="h3 color-texto-mio mx-3">Gimnasio Grecia</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./servicios.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./juanSanchez.html">Juan Sanchez</a></li>
                 </ul>
             </div>
         </div>
-    </nav>-->
-
-    <nav class="navbar navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Gym FitPower</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
-            </ul>
-        </div>
     </nav>
 
-    <header class="bg-primary text-white text-center py-5">
+    <header class="color-primario-mio text-white text-center py-5">
         <div class="container">
-            <h1>Bienvenido a Gym FitPower</h1>
+            <h1>Bienvenido a Gimnasio Grecia</h1>
             <p>Transforma tu cuerpo, transforma tu vida</p>
-            <a href="#contact" class="btn btn-light">Únete ahora</a>
+            <a href="./contacto.html" class="btn btn-amarillo-mio">Únete ahora</a>
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container py-5 text-center">
-        <h2>Sobre Nosotros</h2>
-        <p>Somos un gimnasio dedicado a mejorar tu salud y bienestar con entrenadores profesionales.</p>
+    <section id="noticias" class="container py-5 text-center">
+        <h2>Noticias relevantes</h2>
+        <a href=""></a>
+
     </section>
 
     <!-- Services Section -->
@@ -63,7 +53,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4>Clases Grupales</h4>
-                    <p>Yoga, Zumba, HIIT y más.</p>
+                    <p>Pilates, Karate, Spinning y más.</p>
                 </div>
                 <div class="col-md-4">
                     <h4>Nutrición</h4>
@@ -76,14 +66,15 @@
     <!-- Contact Section -->
     <section id="contact" class="container py-5 text-center">
         <h2>Contacto</h2>
-        <p>Email: info@gymfitpower.com | Tel: +123 456 7890</p>
+        <p>Email: gymgrecia@gmail.com | Tel:  955 81 58 52</p>
     </section>
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 Gym FitPower. Todos los derechos reservados.</p>
+        <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
