Hecho index y nosotros con mapa

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark color-primario-mio">
-        <div class="container color-texto-mio">
+        <div class="container-fluid color-texto-mio">
             <a class="navbar-brand" href="./index.html"><img class="imagen-logo" src="media/favicon.jpg"/>
             <span class="h3 color-texto-mio mx-3">Gimnasio Grecia</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler toggler-mio" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,7 +31,7 @@
     <header class="header-mio color-primario-mio text-white text-center py-5 ">
         <div class="container">
             <h1>Bienvenido a Gimnasio Grecia</h1>
-            <p>Transforma tu cuerpo, transforma tu vida</p>
+            <p>Buenos habitos, buena vida</p>
             <a href="./contacto.html" class="btn btn-amarillo-mio">Únete ahora</a>
         </div>
     </header>
@@ -162,12 +163,17 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <div class="py-5 text-center">
+        <div class="container">
+            <iframe width="60%" height="280" style="border:0" loading="lazy" allowfullscreen="" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAyv2drsb4iOZCLNtJwqf7Mq1j4a4NV3Z0&amp;q=Gimnasio+Juan+S%C3%A1nchez%2C+41720+Los+Palacios+y+Villafranca"></iframe>
+        </div>
+    </div>
+
     <footer class="color-footer-mio text-white text-center py-3">
         <p>&copy; 2025 Gimnasio Grecia. Todos los derechos reservados.</p>
         <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
     </footer>
 
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
