--- a/servicios.html
+++ b/servicios.html
@@ -9,27 +9,29 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-primary">
-        <a class="navbar-brand" href="./index.html">Gimnasio Grecia</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="./servicios.html">Servicios</a></li>
-                <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link" href="./juanSanchez.html">Juan Sanchez</a></li>
-            </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-dark color-primario-mio">
+        <div class="container-fluid color-texto-mio">
+            <a class="navbar-brand" href="./index.html"><img class="imagen-logo" src="media/favicon.jpg"/>
+            <span class="h3 color-texto-mio mx-3">Gimnasio Grecia</span></a>
+            <button class="navbar-toggler toggler-mio" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./servicios.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link nav-link-mio" href="./juanSanchez.html">Juan Sanchez</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
-    <header class="bg-primary text-white text-center py-5">
-        <div class="container">
-            <h1>Bienvenido a Gimnasio Grecia</h1>
-            <p>Transforma tu cuerpo, transforma tu vida</p>
-            <a href="./contacto.html" class="btn btn-light">Únete ahora</a>
-        </div>
-    </header>
+
+    <footer class="color-footer-mio text-white text-center py-3">
+        <p>&copy; 2025 Gimnasio Grecia. Todos los derechos reservados.</p>
+        <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
+    </footer>
 
     <script src="js/bootstrap.bundle.js"></script>
 </body>
