--- a/servicios.html
+++ b/servicios.html
@@ -28,11 +28,88 @@
         </div>
     </nav>
 
+    <header class="header-mio color-primario-mio text-white text-center py-5 ">
+        <div class="container">
+            <h1>¿Que ofrecemos?</h1>
+        </div>
+    </header>
+
+    <section id="servicios-page" class="bg-light py-5 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img class="fotos-card" src="media/dieta.png" alt="Dietas">
+                            <h4 class="card-title">Plan de dietas</h4>
+                            <p class="card-text">Nuestro gimnasio ofrece un plan de dietas personalizado para cada socio. 
+                                Teniendo en cuenta los objetivos individuales, como la pérdida de peso, el aumento de masa 
+                                muscular o la mejora del rendimiento deportivo, diseñamos un programa nutricional adaptado a 
+                                sus necesidades. Nuestros especialistas en nutrición realizan una evaluación detallada 
+                                considerando el estado de salud, las preferencias alimenticias y el estilo de vida de cada persona.
+                                <br>Además, hacemos un seguimiento continuo para ajustar el plan según los progresos y garantizar 
+                                resultados efectivos y sostenibles. Nuestro objetivo es proporcionar una guía clara y práctica 
+                                que ayude a nuestros socios a alcanzar sus metas de forma saludable y equilibrada.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img class="fotos-card" src="media/pilates.jpg" alt="Logo">
+                            <h4 class="card-title">Clases de pilates</h4>
+                            <p class="card-text">Disponemos de clases de pilates los <strong>LUNES Y MIERCOLES</strong>. 
+                                <br>De 17:00 a 18:00
+                                <br>De 18:00 a 19:00
+                                <br>De 19:00 a 20:00
+                                <br>De 20:00 a 21:00
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img class="fotos-card" src="media/karate.jpg" alt="Karate">
+                            <h4 class="card-title">Clases de karate</h4>
+                            <p class="card-text">Disponemos de clases de karate para todas las edades y niveles. 
+                                Nuestro enfoque combina disciplina, técnica y desarrollo físico, adaptándonos a 
+                                las necesidades de cada alumno. Ofrecemos un ambiente seguro y motivador donde podrás 
+                                mejorar tu condición física, aprender autodefensa y fortalecer tu mente y cuerpo.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <img class="fotos-card" src="media/programa-fpr.jpg" alt="Programa FPR">
+                            <h4 class="card-title">Entrenamiento personal adaptado</h4>
+                            <p class="card-text">Ofrecemos entrenamiento personal adaptado a tus objetivos y necesidades. 
+                                Nuestros entrenadores diseñan un programa exclusivo que se ajusta a tu condición física, metas 
+                                y estilo de vida. Ya sea que busques perder peso, ganar músculo, mejorar tu rendimiento o mantenerte 
+                                en forma, te acompañamos con seguimiento personalizado para garantizar resultados efectivos y duraderos.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="bg-light py-5 text-center">
+            <h4>Si desea obtener mas informacion, llame al 955 81 58 52 o rellena el formulario y nos pondremos en contacto rapidamente.</h4>
+            <a href="./contacto.html" class="btn btn-amarillo-mio">Contacta con nosotros</a>
+        </div>
+    </section>
+
     <footer class="color-footer-mio text-white text-center py-3">
         <p>&copy; 2025 Gimnasio Grecia. Todos los derechos reservados.</p>
         <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
     </footer>
 
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js" ></script>
 </body>
 </html>
