--- a/juanSanchez.html
+++ b/juanSanchez.html
@@ -9,8 +9,9 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark color-primario-mio">
-        <div class="container color-texto-mio">
+        <div class="container-fluid color-texto-mio">
             <a class="navbar-brand" href="./index.html"><img class="imagen-logo" src="media/favicon.jpg"/>
             <span class="h3 color-texto-mio mx-3">Gimnasio Grecia</span></a>
             <button class="navbar-toggler toggler-mio" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -27,6 +28,11 @@
         </div>
     </nav>
 
-    <script src="js/bootstrap.bundle.js"></script>
+    <footer class="color-footer-mio text-white text-center py-3">
+        <p>&copy; 2025 Gimnasio Grecia. Todos los derechos reservados.</p>
+        <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
+    </footer>
+
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
