--- a/nosotros.html
+++ b/nosotros.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark color-primario-mio">
         <div class="container-fluid color-texto-mio">
             <a class="navbar-brand" href="./index.html"><img class="imagen-logo" src="media/favicon.jpg"/>
@@ -78,7 +79,8 @@
 
     <div class="bg-light py-5 text-center">
         <div class="container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3179.58906659375!2d-5.932019024337223!3d37.16246957214604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1277c576045545%3A0x8db0e747256389cc!2sGimnasio%20Juan%20S%C3%A1nchez!5e0!3m2!1ses!2ses!4v1741447453668!5m2!1ses!2ses" width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3179.58906659375!2d-5.932019024337223!3d37.16246957214604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1277c576045545%3A0x8db0e747256389cc!2sGimnasio%20Juan%20S%C3%A1nchez!5e0!3m2!1ses!2ses!4v1741447453668!5m2!1ses!2ses" 
+            width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
@@ -87,6 +89,6 @@
         <p> Calle San Sebastián, 3, 41720 Los Palacios y Villafranca, Sevilla</p>
     </footer>
 
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
